# particles2.0

./: CMakeLists.txt  README.md
src/: main.cpp
src/util/: cl.hpp  part.hpp
